📦 Extract virtual cursor into managed class